--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@subsquid/typeorm-store": "^1.2.6",
     "dotenv": "^16.4.4",
     "pg": "8.11.3",
+    "prettier": "^3.2.5",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
